--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<div class="row">
-  <!-- <line-chart></line-chart> -->
-  <!-- <beizer-curve></beizer-curve> -->
-  <beizer-curve numOfCurve=1 numOfPoints=5></beizer-curve>
+<div>
+  <beizer-curve [numOfCurves]=5 [numOfPoints]=5></beizer-curve>
 </div>
-<!-- <div class="row">
-  <line-chart></line-chart>
-  <line-chart></line-chart>
-  <line-chart></line-chart>
-</div>
-<div class="row">
-  <line-chart></line-chart>
-</div> -->
