--- a/src/app/charts/beizer-curve/beizer-curve.component.css
+++ b/src/app/charts/beizer-curve/beizer-curve.component.css
@@ -1,3 +1,11 @@
+:host {
+  display: block;
+}
+
+.wrapper {
+  position: relative;
+}
+
 path {
 	fill: none;
 	stroke: #999;
@@ -5,6 +13,8 @@ path {
 
 svg {
   background-color: lightgray;
+  width: 100%;
+  height: 100%;
 }
 
 .line {
