--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div>
-  <div class="sliderSection">
+  <div class="sliders">
     <label>Curves</label>   
     <input #curves (input)="curves.value" type="range" min="1" max="50" value="5">
      {{curves.value}}
   </div>
  
-  <div class="sliderSection">
+  <div class="sliders">
     <label>Elements</label>  
     <input #points (input)="points.value" type="range" min="1" max="50" value="5">
     {{points.value}}
